# blacktrade

./: .gitignore  Cargo.toml  README.md  example.py  test.sh
examples/: closure.rs  interface.rs  log.rs  polo.rs  py.rs  redux.rs  settings.json  settings.rs  thread.rs  xml.rs
examples/components/: articles.html  articles.xml  index.xml
examples/components/base/: CommandOutPut.xml
src/: main.rs
src/actions/: command.rs  mod.rs
src/backup/: network_polo.rs
src/components/: app.rs  application.rs  command_bar.rs  command_output.rs  element.rs  mod.rs  status_bar.rs  tabs.rs  utils.rs  xml.rs
src/components/ele/: mod.rs  powerline_symbol.rs  powerline_tab.rs
src/components/helpers/: hb_macros.rs  hb_utils.rs  height_buffer.rhai  height_buffer.rs  mod.rs  utils.rs
src/components/parsing/: xml.rs
src/middlewares/: command.rs  command_bar.rs  console.rs  debug.rs  keyboard.rs  mod.rs  term.rs
src/reducers/: command_bar.rs  console.rs  mod.rs  mode.rs  size.rs
src/reducers/commands/: mod.rs
src/reducers/error/: mod.rs
src/reducers/keyboard/: mod.rs
src/scripts/: spot.sh
src/store/: events.rs  helpers.rs  loops.rs  mod.rs
src/store/action/: command.rs  default.rs  mod.rs
src/store/app/: mod.rs  reducer.rs  state.rs  utils.rs
src/store/app/commands/: mod.rs
src/store/app/event_handlers/: command_key.rs  key.rs  mod.rs  normal_key.rs  utils.rs
src/store/app/reducers/: command_bar.rs  console.rs  mod.rs  mode.rs  size.rs
src/store/app/reducers/commands/: mod.rs
src/store/app/reducers/error/: mod.rs
src/store/app/reducers/keyboard/: .command_key.rs.swo  .key.rs.swo  command_key.rs  mod.rs  normal_key.rs
src/store/app/structs/: command.rs  command_handler.rs  mod.rs
src/store/app/utils/: mod.rs  python.rs
src/store/tab/: mod.rs
src/store/ui/: mod.rs
src/structs/: mod.rs
src/structs/app/: .mod.rs.swn  command.rs  command_handler.rs  events.rs  mod.rs  mode.rs  quote.rs  setting.rs  state.rs
src/structs/ui/: tabs.rs
src/utils/: app.rs  commands.rs  format.rs  fs.rs  input.rs  keys.rs  middleware.rs  mod.rs  run.rs  store.rs
