[package]
name = "polorust"
version = "0.0.1"
authors = ["Frank Yao <frank.yao@cyanide.io>"]

[dependencies]
redux = { git = "https://github.com/knarfytrebil/redux-rs.git", branch = "dev" }
log = { version = "^0.4.8", features = ["max_level_debug"] }
uuid = { version = "0.8.1", features = ["v4"] }
simplelog = "^0.8.0"
json = "*"
termion = "1.5.5"
regex="1"
minidom = "0.12.0"
vec-tree = "0.1.2"
tui = "0.9.5"
unicode-width = "0.1"

[dependencies.ws]
version = "*"
features = ["ssl"]

[dependencies.cpython]
version = "0.5.0"
default-features = false
features = ["python3-sys"]