[package]
name = "polorust"
version = "0.0.1"
authors = ["Frank Yao <frank.yao@cyanide.io>"]

[dependencies]
redux = { git = "https://github.com/knarfytrebil/redux-rs.git", branch = "dev" }
log = { version = "^0.4.8", features = ["max_level_debug"] }
uuid = { version = "0.8.1", features = ["v4"] }
simplelog = "^0.8.0"
json = "*"
termion = "1.5.5"
regex="1"
tui = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.1"
treexml = "0.7"
handlebars = { version = "3.5.0", features = ["script_helper"] }
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.ws]
version = "*"
features = ["ssl"]

[dependencies.cpython]
version = "0.7.1"
default-features = false
features = ["python3-sys"]
