[package]
name = "polorust"
version = "0.0.1"
authors = ["Frank Yao <frank.yao@cyanide.io>"]

[dependencies]
redux = { git = "https://github.com/knarfytrebil/redux-rs.git", branch = "dev" }
log = { version = "^0.4.8", features = ["max_level_debug"] }
uuid = { version = "1.5.0", features = ["v4"] }
simplelog = "^0.12.1"
json = "*"
termion = { version = "*" }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.1"
treexml = "0.7"
handlebars = { version = "4.5.0", features = ["script_helper"] }
openssl = { version = "0.10", features = ["vendored"] }
itertools = "0.12.0"
ratatui = { version = "0.24.0", features = ["all-widgets", "termion"], default-features = false }

[dependencies.ws]
version = "*"
features = ["ssl"]
